backend/api/tests/integration/snapshots/integration__course__publish_modules-3.snap
---
source: tests/integration/course.rs
expression: body

---
{
  "id": "[id]",
  "publishedAt": "[published_at]",
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "courseData": {
    "draftOrLive": "live",
    "displayName": "course name1",
    "language": "en",
    "description": "draft test description",
    "lastEdited": "[last_edited]",
    "privacyLevel": "public",
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {},
    "cover": {
      "id": "[id]",
      "kind": "Cover",
      "is_complete": true
    },
    "ageRanges": [],
    "affiliations": [],
    "categories": [],
    "additionalResources": [],
    "items": [
      "0cc084bc-7c83-11eb-9f77-e3218dffb008",
      "3a71522a-cd77-11eb-8dc1-af3e35f7c743"
    ]
  }
}
