backend/api/tests/integration/snapshots/integration__course__update_and_publish_browse-1.snap
---
source: tests/integration/course.rs
expression: body
---
{
  "id": "f77222a6-906b-11ed-b4f6-2f6dfab2ea0a",
  "publishedAt": "2022-06-24T18:35:33.636556Z",
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": false,
  "courseData": {
    "draftOrLive": "draft",
    "displayName": "course name1",
    "language": "en",
    "description": "draft test description",
    "lastEdited": "[last_edited]",
    "duration": null,
    "privacyLevel": "public",
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {},
    "cover": {
      "id": "3a272c30-906d-11ed-b4f6-1fef9f7412be",
      "kind": "Cover",
      "is_complete": true
    },
    "categories": [],
    "additionalResources": [],
    "units": [
      {
        "id": "e0984370-906c-11ed-b4f6-3f864931e86f",
        "displayName": "course1 unit 1",
        "description": "Image",
        "imageId": "3095d05e-f2c7-11ea-89c3-3b621dd74a1f"
      },
      {
        "id": "e098451e-906c-11ed-b4f6-d3927726efad",
        "displayName": "course1 unit 2",
        "description": "Audio",
        "audioId": "0d2c9c30-3850-11ed-ac6a-9b037f9e2276"
      },
      {
        "id": "09225240-906d-11ed-b4f6-ffc72cfa1509",
        "displayName": "course1 unit 3",
        "description": "URL",
        "link": "https://jigzi.org/"
      }
    ]
  },
  "adminData": {
    "rating": null,
    "blocked": false,
    "curated": false,
    "premium": false
  }
}
